# taxja

./: .gitignore  Makefile  QUICK_START.md  QUICK_START_CN.md  README.md  START_HERE.md  create_tables.py  deploy.py  deploy_docker.py  deploy_migrate.py  deploy_prod.py  deploy_setup.py  deploy_start.py  diagnose_403.py  docker-compose.celery.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  redeploy_server.sh  requirements.txt  start-dev.ps1  start-services.ps1  test_api.ps1  test_system.py  tmp_verify.js  token.txt  upload_dist.py  verify_fix.py  verify_user.py
backend/: .dockerignore  .env.example  .env.test.example  .requirements.hash  Dockerfile  README.md  _add_business_type.py  _add_reset_cols.py  _check_cols.py  cleanup_all.py  db_schema.sql  db_seed.sql  pyproject.toml  requirements-minimal.txt  requirements.txt  reset_db.py
backend/.codex-run/: start_backend_8000.cmd  start_cloudflared_taxja.cmd
backend/alembic/: env.py  verify_property_migration.py
backend/app/: __init__.py  celery_app.py  main.py
backend/demo_models/: amount_scaler.pkl  expense_model.pkl  expense_vectorizer.pkl  income_model.pkl  income_vectorizer.pkl
backend/docs/: AI_ASSISTANT_MODULE.md  API_PROPERTY_ENDPOINTS.md  BANK_IMPORT_MODULE.md  CONTRACT_OCR_ROUTING.md  DEVELOPER_GUIDE_PROPERTY_MANAGEMENT.md  EMPLOYEE_REFUND_MODULE.md  ERROR_TRACKING.md  GDPR_PROPERTY_DATA_RETENTION.md  HISTORICAL_IMPORT_CONFIG.md  KAUFVERTRAG_OCR_SERVICE.md  MIETVERTRAG_OCR_SERVICE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  OCR_MODULE.md  PROMETHEUS_METRICS.md  TASK_D3_1_SUMMARY.md  (+14 more)
(+1711 files in other folders)
